Revisão completa de todos os posts: clareza, fatos com fonte, código e diagramas
- Série do Java (8, 11, 17, 21, 25 e 29): segunda revisão com foco no leitor,
  termos explicados, links entre as LTS e diagramas novos
- Guia de atualizações do Java atualizado para 2026 (suporte, licenças,
  distribuições, versões mínimas), reorganizado e com 4 diagramas
- Demais 18 posts revisados: erros factuais e de código corrigidos (exemplos
  executados em Docker), fontes oficiais, diagramas no padrão do blog e
  links internos

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>