@@ -1,24 +1,26 @@
 ---
-title: "Virtual threads, pinning e CLOSE_WAIT"
+title: "Virtual threads no Java 21: pinning e CLOSE_WAIT"
 published: 2026-09-12
-description: "Por que um serviço com virtual threads congela sem erro no log: pinning por bloco `synchronized`, com CLOSE_WAIT como rastro. Estados TCP, carrier threads, thread dump e JFR, bulkhead e circuit breaker com código Java, backpressure e lei de Little."
+description: "Por que um serviço Java 21 com virtual threads congela sem erro no log: pinning por `synchronized` (Java 21 a 23, corrigido no Java 24 pela JEP 491), com CLOSE_WAIT como rastro. Carrier threads, thread dump, JFR e por que bulkhead e circuit breaker continuam necessários no Java 25."
 tags: [Java, Virtual Threads, Resiliência]
 category: Java
 cover: /covers/sessao-02-virtual-threads.svg
 draft: false
 ---
 
-> Formato de diagnóstico: primeiro o sintoma, depois a causa.
+Um serviço Java 21 com virtual threads para de responder no pico, sem nenhum erro no log, e o host acumula milhares de sockets em CLOSE_WAIT. Este post segue o diagnóstico em formato de desafio: primeiro o sintoma, depois a resposta que parecia certa, onde ela falhou e a causa real, o **pinning** de virtual threads dentro de blocos `synchronized`. Em seguida vem o que continua valendo mesmo depois da correção: limites explícitos com bulkhead e circuit breaker, com código Java que você pode rodar.
+
+> **Em quais versões isso acontece.** O pinning por `synchronized` existe do **Java 21 ao 23**. O Java 24 corrigiu o problema com a [JEP 491](https://openjdk.org/jeps/491), e o **Java 25 é a primeira LTS com a correção**. As seções 6 e 7 (gargalo, bulkhead e circuit breaker) valem para qualquer versão. O modelo de virtual threads está no [post do Java 21](/posts/java-21/#virtual-threads) e a correção, no [post do Java 25](/posts/java-25/#synchronized-não-prende-mais-virtual-threads).
 
 ## 1. Desafio
 
-**Enunciado.** Serviço de autorização de cartões, Spring Boot 3 com Tomcat embarcado, Java 21. O time ligou virtual threads para o processamento de requisições.
+**Enunciado.** Serviço de autorização de cartões, Spring Boot 3 com Tomcat embarcado, Java 21. O time ligou virtual threads para processar as requisições (`spring.threads.virtual.enabled=true`, disponível a partir do Spring Boot 3.2). Cada autorização chama o **adquirente**, a empresa que processa a transação de cartão para o lojista.
 
-Dois dias depois, no pico da tarde, uma instância para de responder. Não devolve erro — simplesmente não responde. O health check estoura, o Kubernetes reinicia o pod, e volta ao normal por algumas horas.
+Dois dias depois, no pico da tarde, uma instância para de responder. Não devolve erro: simplesmente não responde. O health check estoura o tempo, o Kubernetes reinicia o pod, e tudo volta ao normal por algumas horas.
 
 Os sinais:
 
-- A JVM está viva. Sem OutOfMemory, sem exceção, sem stack trace no log.
+- A JVM está viva. Sem OutOfMemoryError, sem exceção, sem stack trace no log.
 - CPU baixa, memória estável, GC comportado.
 - No host, milhares de sockets em CLOSE_WAIT.
 - Não reproduz em homologação. O teste de carga sintético passa limpo.
@@ -27,15 +29,15 @@ O que está acontecendo?
 
 ## 2. Vocabulário que faltava
 
-O diagnóstico começa pelo vocabulário: sem ele, o raciocínio trava. Quatro peças antes do resto.
+O diagnóstico começa pelo vocabulário: sem ele, o raciocínio trava. São quatro peças.
 
-**Socket** — a ponta que cada lado segura numa conexão de rede. Como o telefone numa ligação: enquanto a ligação existe, ele está ocupado. Cada requisição HTTP em curso consome um, e socket é recurso finito — conta no teto de arquivos abertos do processo.
+**Socket** — a ponta que cada lado segura numa conexão de rede. Funciona como o telefone numa ligação: enquanto a ligação existe, ele está ocupado. Cada requisição HTTP em curso usa um, e socket é recurso finito: cada um conta no limite de arquivos abertos do processo.
 
-**CLOSE_WAIT** — estado TCP que significa: o outro lado desligou, o seu lado ainda não. Encerrar uma conexão exige que os dois desliguem, e quem pousa o telefone do seu lado é a aplicação, não o sistema operacional. Milhares acumulados significam que o código parou de chegar na linha que fecha.
+**CLOSE_WAIT** — estado TCP que significa "o outro lado desligou, o seu ainda não". Encerrar uma conexão exige que os dois lados desliguem, e quem desliga do seu lado é a aplicação, chamando `close()`, não o sistema operacional ([RFC 9293](https://www.rfc-editor.org/rfc/rfc9293)). Milhares de sockets nesse estado significam que o código parou de chegar à linha que fecha a conexão.
 
-**Platform thread** — a thread tradicional do Java, que é uma thread do SO. Custa cerca de 1 MB só para existir, então ninguém cria uma por requisição: cria-se um pool e as requisições se revezam. O problema aparece quando o trabalho é esperar — 300 ms parado esperando o adquirente é uma thread ocupada sem fazer nada.
+**Platform thread** — a thread tradicional do Java, que corresponde a uma thread do sistema operacional (SO). É cara: só a pilha reserva 1 MB por padrão no Linux x64 ([documentação do `java`](https://docs.oracle.com/en/java/javase/21/docs/specs/man/java.html)). Por isso ninguém cria uma por requisição: cria-se um pool, e as requisições se revezam. O Tomcat do Spring Boot usa, por padrão, até 200 ([`server.tomcat.threads.max`](https://docs.spring.io/spring-boot/appendix/application-properties/index.html#application-properties.server.server.tomcat.threads.max)). O desperdício aparece quando o trabalho é esperar: 300 ms esperando o adquirente são 300 ms de uma thread ocupada sem fazer nada.
 
-**Virtual thread** — thread gerenciada pela JVM, não pelo SO. Custa quase nada, então cabem dezenas de milhares. Elas não substituem as threads reais: montam em cima de uma quantidade pequena delas, as **carrier threads**. Quando uma virtual thread bloqueia, a JVM a **desmonta** da carrier e coloca outra no lugar. É o revezamento que faz o modelo funcionar.
+**Virtual thread** — thread gerenciada pela JVM, não pelo SO. É barata a ponto de uma JVM poder ter milhões ([JEP 444](https://openjdk.org/jeps/444)). Ela não substitui as threads reais: para executar, é **montada** sobre uma das poucas **carrier threads**, que são platform threads de um pool da JVM (por padrão, uma por processador disponível). Quando a virtual thread bloqueia em I/O, a JVM normalmente a **desmonta** da carrier e coloca outra no lugar. É esse revezamento que faz o modelo funcionar.
 
 ## 3. Resposta dada
 
@@ -45,58 +47,138 @@ O diagnóstico começa pelo vocabulário: sem ele, o raciocínio trava. Quatro p
 
 Dois ajustes.
 
-**Não faltou virtual thread — faltou carrier.** Virtual thread é barata e a JVM cria quantas precisar. O gargalo é o punhado de threads reais embaixo. Se cada uma delas fica presa a uma virtual thread que bloqueou e não desmontou, existem dezenas de milhares de virtual threads e nenhuma consegue executar. Esse estado tem nome: **pinning**.
+**Não faltou virtual thread, faltou carrier.** Virtual thread é barata, e a JVM cria quantas forem precisas. O gargalo é o punhado de threads reais embaixo delas. Se cada carrier fica presa a uma virtual thread que bloqueou e não desmontou, pode haver dezenas de milhares de virtual threads prontas, e nenhuma consegue executar. Esse estado tem nome: **pinning** (a virtual thread fica "pregada" à carrier).
 
-**A causalidade é a inversa.** O CLOSE_WAIT não é a causa, é a impressão digital. As carriers travaram, então o código parou de rodar, então ninguém chegou na linha que fecha o socket. Os clientes desistiram e desligaram do lado deles. Milhares de CLOSE_WAIT é o retrato de uma aplicação congelada, não de um bug de fechamento de conexão.
+**A causalidade é a inversa.** O CLOSE_WAIT não é a causa, é a impressão digital. As carriers travaram, então o código parou de rodar, então ninguém chegou à linha que fecha o socket. Os clientes estouraram o timeout e desligaram do lado deles. Milhares de CLOSE_WAIT são o retrato de uma aplicação congelada, não de um bug no fechamento de conexões.
 
-![Diagrama: todas as carriers presas por virtual threads que bloquearam dentro de synchronized — pinning](/posts/virtual-threads-pinning-close-wait/pinning-virtual-threads.svg)
+O diagrama mostra a cadeia completa, do pico de requisições até os sockets em CLOSE_WAIT:
 
-## 5. Aprendizado — pinning
+![Diagrama: no Java 21 a 23, as virtual threads montadas nas 4 carriers bloqueiam dentro de synchronized e prendem as carriers; as demais esperam, ninguém fecha os sockets e eles se acumulam em CLOSE_WAIT; no Java 24 em diante, a JEP 491 corrige o synchronized](/posts/virtual-threads-pinning-close-wait/pinning-virtual-threads.svg)
 
-No Java 21, a causa principal é uma só: **bloquear dentro de um bloco `synchronized`**.
+## 5. Aprendizado — pinning (Java 21 a 23)
 
-O motivo é interno da JVM. `synchronized` compila para `monitorenter` e `monitorexit`, que adquirem e liberam o monitor do objeto, e a JVM registra o dono do monitor como sendo a **thread do sistema operacional** — a carrier. Se ela desmontasse a virtual thread ali dentro, perderia a posse de algo que ainda segura. Então a JVM não desmonta.
+No Java 21, a virtual thread fica presa à carrier em dois casos ([JEP 444](https://openjdk.org/jeps/444)): quando bloqueia **dentro de um bloco ou método `synchronized`**, e durante um método nativo ou função estrangeira. O primeiro é o que pesa: segundo a JEP 491, resolvê-lo elimina quase todos os casos de pinning.
 
-Detalhe cruel: quase nunca é o seu código. A Netflix documentou essa falha em produção em julho de 2024, e a causa foi uma biblioteca de tracing com blocos synchronized por dentro — Spring Boot 3, Tomcat embarcado, Java 21, sockets em CLOSE_WAIT. O mesmo quadro deste desafio.
+O motivo é interno da JVM. Até o Java 23, ela registra como dona do monitor de um objeto (o lock que o `synchronized` adquire) a **platform thread**, ou seja, a carrier, e não a virtual thread. Se a virtual thread desmontasse ali dentro, outra virtual thread montada na mesma carrier pareceria dona do monitor, e a exclusão mútua se perderia ([JEP 491](https://openjdk.org/jeps/491)). Então a JVM não desmonta: a carrier fica bloqueada junto. E a JEP 444 é explícita: o escalonador **não compensa** o pinning criando carriers extras.
 
-E é por isso que homologação passa limpo: pinning só vira travamento quando há concorrência suficiente para prender todas as carriers ao mesmo tempo. Com carga baixa, uma carrier presa é invisível.
+**Veja acontecer.** O programa abaixo roda 100 tarefas que esperam 100 ms cada, uma vez segurando um `synchronized` e outra segurando um `ReentrantLock`. Cada tarefa tem o próprio lock, então ninguém disputa nada: a única diferença é o tipo de lock.
+
+```java title="CarrierPresa.java"
+import java.time.Duration;
+import java.time.Instant;
+import java.util.concurrent.ExecutorService;
+import java.util.concurrent.Executors;
+import java.util.concurrent.locks.ReentrantLock;
+import java.util.stream.IntStream;
+
+public class CarrierPresa {
+
+    static void esperarAdquirente() {
+        try {
+            Thread.sleep(100); // espera de I/O: aqui a virtual thread deveria desmontar
+        } catch (InterruptedException e) {
+            Thread.currentThread().interrupt();
+        }
+    }
+
+    static void comSynchronized() {
+        Object monitor = new Object(); // um por tarefa: ninguém disputa o lock
+        synchronized (monitor) {
+            esperarAdquirente();
+        }
+    }
+
+    static void comReentrantLock() {
+        ReentrantLock lock = new ReentrantLock(); // um por tarefa, como acima
+        lock.lock();
+        try {
+            esperarAdquirente();
+        } finally {
+            lock.unlock();
+        }
+    }
+
+    static long medir(Runnable tarefa) {
+        Instant inicio = Instant.now();
+        try (ExecutorService executor = Executors.newVirtualThreadPerTaskExecutor()) {
+            IntStream.range(0, 100).forEach(i -> executor.submit(tarefa));
+        }
+        return Duration.between(inicio, Instant.now()).toMillis();
+    }
+
+    public static void main(String[] args) {
+        System.out.println("Java " + Runtime.version().feature());
+        System.out.println("synchronized:  " + medir(CarrierPresa::comSynchronized) + " ms");
+        System.out.println("ReentrantLock: " + medir(CarrierPresa::comReentrantLock) + " ms");
+    }
+}
+```
+
+Rodando com 4 carriers, como numa máquina de 4 vCPUs, nas imagens `eclipse-temurin:21` e `eclipse-temurin:25`:
+
+```text title="Saída"
+$ java -Djdk.virtualThreadScheduler.parallelism=4 CarrierPresa.java
+Java 21
+synchronized:  2581 ms
+ReentrantLock: 106 ms
+
+$ java -Djdk.virtualThreadScheduler.parallelism=4 CarrierPresa.java
+Java 25
+synchronized:  149 ms
+ReentrantLock: 104 ms
+```
+
+No Java 21, com `synchronized`, só 4 tarefas avançam por vez: 100 tarefas ÷ 4 carriers × 100 ms ≈ 2,5 s. Com `ReentrantLock`, as 100 esperam juntas. No Java 25, os dois casos se comportam igual. Os tempos exatos variam de máquina para máquina; a proporção é o que importa.
+
+**Nem sempre o `synchronized` está no seu código.** A Netflix documentou exatamente esse quadro em julho de 2024: Spring Boot 3, Tomcat embarcado, Java 21, instâncias que paravam de responder e sockets acumulados em CLOSE_WAIT. Ali, o `synchronized` vinha da biblioteca de tracing Brave (em `RealSpan.finish`). Dentro dele, as virtual threads esperavam um `ReentrantLock` do reporter do Zipkin. As instâncias tinham 4 vCPUs, portanto 4 carriers. Com as quatro presas, quando o lock era liberado, a virtual thread que deveria recebê-lo não tinha carrier para executar, e nada mais andava. Os sockets em CLOSE_WAIT batiam com milhares de virtual threads que o Tomcat tinha criado e que nunca chegaram a executar.
+
+É também por isso que homologação passa limpo: pinning só vira travamento quando há concorrência suficiente para prender todas as carriers ao mesmo tempo. Com carga baixa, uma carrier presa passa despercebida.
 
 **Como se descobre**
 
-- **Thread dump** — `jcmd <pid> Thread.dump_to_file`. A partir do Java 21 mostra as virtual threads, não só as platform. As carriers aparecem todas paradas no mesmo ponto, e esse ponto é a resposta.
-- **JFR (Java Flight Recorder)** — o gravador de eventos embutido na JVM. O evento `jdk.VirtualThreadPinned` dispara sempre que uma virtual thread bloqueia sem conseguir desmontar, com o stack trace. Deixar ligado com alerta é a prática recomendada.
+- **Thread dump no formato novo.** O dump tradicional (`jstack` ou `jcmd <pid> Thread.print`) **não mostra virtual threads** ([JEP 444](https://openjdk.org/jeps/444)); foi o que confundiu a Netflix no começo, porque o dump parecia ocioso. Use `jcmd <pid> Thread.dump_to_file -format=text dump.txt` (ou `-format=json`; o nome do arquivo é obrigatório). Nele, as carriers (`ForkJoinPool-1-worker-N`) aparecem executando `Continuation.run`, e as virtual threads montadas nelas aparecem paradas no mesmo ponto, dentro do `synchronized`. Esse ponto é a resposta. As demais virtual threads aparecem sem stack: foram criadas e esperam uma carrier.
+- **JFR (JDK Flight Recorder)**, o gravador de eventos embutido na JVM. O evento `jdk.VirtualThreadPinned` registra, com stack trace, cada vez que uma virtual thread fica parada presa à carrier por mais de 20 ms, o limiar padrão. O evento vem habilitado, mas só é gravado se houver uma gravação ativa: `java -XX:StartFlightRecording=filename=rec.jfr ...` e depois `jfr print --events jdk.VirtualThreadPinned rec.jfr`. No `CarrierPresa.java`, o Java 21 grava 100 eventos, um por tarefa com `synchronized`; o Java 25 grava zero. Manter o evento ligado em produção, com alerta, é uma das recomendações do [artigo da InfoQ](https://www.infoq.com/articles/virtual-threads-after-jdk24/) citado nas fontes.
+- **`-Djdk.tracePinnedThreads=short`** (ou `full`), **só do Java 21 ao 23**. Imprime o stack sempre que uma virtual thread bloqueia presa, e o frame marcado aponta o `synchronized`:
+
+  ```text
+  VirtualThread[#25]/runnable@ForkJoinPool-1-worker-2 reason:MONITOR
+      CarrierPresa.comSynchronized(CarrierPresa.java:21) <== monitors:1
+  ```
+
+  A JEP 491 removeu essa propriedade no Java 24.
 
 **Como se resolve**
 
-- Trocar `synchronized` por `ReentrantLock` no código que bloqueia — mesma exclusão mútua, mas a espera não prega a carrier.
-- Subir para o **Java 25**, primeira LTS com a correção do JEP 491, onde `synchronized` deixou de pregar.
+- **Subir para o Java 24 ou mais novo**, na prática para o **Java 25**, a primeira LTS com a JEP 491. A partir dela, a virtual thread desmonta ao bloquear dentro de `synchronized` ou em `Object.wait()`. É o conserto definitivo e vale também para o `synchronized` das dependências. Os detalhes estão no [post do Java 25](/posts/java-25/#synchronized-não-prende-mais-virtual-threads).
+- **Trocar `synchronized` por `ReentrantLock`**, se o serviço fica no Java 21. É a mesma exclusão mútua, mas a espera não prende a carrier. A JEP 444 recomenda a troca só onde o bloco roda com frequência e protege I/O potencialmente longo; blocos raros ou que só protegem operações em memória podem ficar como estão. No Java 24 em diante, a JEP 491 volta a recomendar `synchronized` onde for prático.
+- **Atualizar a dependência**, se o `synchronized` está numa biblioteca e uma versão nova já trocou o lock. Se não trocou, não há o que refatorar no seu código: resta subir o Java.
 
-Se o `synchronized` está dentro de uma dependência, o upgrade é o único caminho — não há o que refatorar. Mas upgrade leva semanas, e no plantão a mitigação imediata é outra: desligar as virtual threads por configuração e voltar ao pool tradicional. Perde escalabilidade, para de cair. Curativo e conserto são coisas separadas.
+Um upgrade de Java leva semanas, e no plantão a mitigação imediata é outra: desligar as virtual threads por configuração (`spring.threads.virtual.enabled=false`) e voltar ao pool tradicional. Perde escalabilidade, mas para de cair. Curativo e conserto são coisas separadas.
 
 ## 6. Aprendizado — o gargalo mudou de lugar
 
-O Java 25 resolve o pinning por `synchronized`, mas não resolve o que vem junto com virtual threads.
+O Java 25 resolve o pinning por `synchronized`, mas não resolve o que vem junto com as virtual threads. Esta parte vale para qualquer versão.
 
-No modelo antigo, o pool de 200 threads fazia duas coisas ao mesmo tempo sem ninguém perceber: separava o trabalho de cada requisição **e** limitava quantas chamadas simultâneas saíam do serviço. Com virtual threads, cada requisição ganha a sua e o segundo trabalho desaparece.
+No modelo antigo, o pool de 200 threads do Tomcat fazia dois trabalhos sem ninguém perceber: separava o trabalho de cada requisição **e** limitava quantas requisições estavam em andamento, portanto quantas chamadas saíam do serviço ao mesmo tempo. Com virtual threads, cada requisição ganha a sua thread, e o segundo trabalho desaparece. A propriedade `server.tomcat.threads.max` nem tem efeito quando as virtual threads estão ligadas.
 
 Chegam 10 mil requisições no pico:
 
-- **No Postgres** nada é derrubado — forma-se fila. O pool do Hikari tem teto, digamos 20. Vinte entram, o resto espera, e depois de alguns segundos vem timeout em massa. Essa fila não existia antes: com 200 threads, só 200 pediam conexão, e as demais nem tinham começado.
-- **No adquirente** é pior, porque o problema sai de casa. Milhares de chamadas simultâneas para um terceiro com contrato de 500. Ele recusa, ou fica lento — e aí você tem milhares de conexões abertas esperando.
+- **No Postgres**, nada é derrubado de imediato: forma-se fila. O pool de conexões do HikariCP tem teto (o padrão é 10; digamos que o time configurou 20). Vinte requisições pegam conexão e o resto espera. Quem não consegue conexão em 30 segundos, o `connectionTimeout` padrão, recebe erro, e isso acontece em massa ([HikariCP](https://github.com/brettwooldridge/HikariCP)). Essa fila não existia antes: com 200 threads, no máximo 200 requisições pediam conexão, e as demais nem tinham começado.
+- **No adquirente**, é pior, porque o problema sai de casa. Milhares de chamadas simultâneas chegam a um terceiro com contrato para 500. Ele recusa ou fica lento, e aí você tem milhares de conexões abertas esperando.
 
-**Virtual threads não eliminam gargalo, mudam o gargalo de lugar.** O conserto é tornar explícito o que era implícito: um limite declarado em cada recurso compartilhado, e o número decidido por você em vez de herdado do tamanho do pool.
+**Virtual threads não eliminam gargalo, mudam o gargalo de lugar.** O conserto é tornar explícito o que era implícito: um limite declarado em cada recurso compartilhado, com o número decidido por você em vez de herdado do tamanho do pool.
 
-![Diagrama: sem o pool, a enxurrada passa direto e a fila se forma no banco e no adquirente](/posts/virtual-threads-pinning-close-wait/gargalo-mudou-de-lugar.svg)
+![Diagrama: antes, o pool de 200 threads separava o trabalho e limitava a saída; depois, 10.000 virtual threads sem limite formam fila no Postgres e sobrecarregam o adquirente; o conserto é bulkhead, circuit breaker e limite também antes do banco](/posts/virtual-threads-pinning-close-wait/gargalo-mudou-de-lugar.svg)
 
 ## 7. As três peças juntas
 
 São três trabalhos diferentes, e nenhum substitui o outro:
 
-- **Virtual threads dão vazão** — mais trabalho em voo ao mesmo tempo. Não deixam nada mais rápido: se o adquirente leva 300 ms, continua levando 300 ms. O que muda é quantas requisições cabem simultaneamente.
-- **Bulkhead limita a saída** — preventivo, funciona o tempo todo. Declara quantas chamadas simultâneas podem sair do seu serviço. Devolve o limite que o pool de threads dava de graça.
-- **Circuit breaker interrompe** — reativo, só age quando o alvo está mal. Percebe a sequência de falhas e para de insistir por um tempo.
+- **Virtual threads dão vazão**, isto é, mais trabalho em andamento ao mesmo tempo. Não deixam nada mais rápido: se o adquirente leva 300 ms, continua levando 300 ms. O que muda é quantas requisições cabem simultaneamente.
+- **Bulkhead limita a saída.** É preventivo e funciona o tempo todo: declara quantas chamadas simultâneas podem sair do serviço para um destino. Devolve o limite que o pool de threads dava de graça.
+- **Circuit breaker interrompe.** É reativo e só age quando o destino está mal: percebe a sequência de falhas e para de insistir por um tempo.
 
-Sem o breaker, cada requisição ainda gasta os 200 ms esperando vaga no bulkhead para descobrir algo que você já sabia depois da décima falha.
+Um sem o outro deixa buraco. Se o adquirente está lento, só com o bulkhead cada requisição ainda espera até 200 ms por uma vaga (o `maxWaitDuration` dos exemplos abaixo), mais o tempo da própria chamada, para descobrir o que as últimas dezenas de falhas já tinham mostrado.
 
 ### Vazão — o efeito das virtual threads
 
@@ -135,11 +217,16 @@ public class Vazao {
 }
 ```
 
-Mil chamadas de 300 ms. Com 200 threads são cinco levas, algo perto de 1500 ms. Com virtual threads todas ficam em voo juntas, perto de 300 ms. É esse número que deveria acender a luz amarela: mil chamadas simultâneas saindo para um terceiro.
+```text title="Saída (eclipse-temurin:21)"
+pool de 200 threads: 1623 ms
+virtual threads:     324 ms
+```
+
+São mil chamadas de 300 ms. Com 200 threads, elas saem em cinco levas: no mínimo 1500 ms, um pouco mais na prática, porque criar as threads também custa. Com virtual threads, todas ficam em andamento juntas, perto de 300 ms. É esse número que deveria acender a luz amarela: mil chamadas simultâneas saindo para um terceiro.
 
 ### Bulkhead — o limite, sem dependência
 
-Também roda sozinho. Mostra o pico real de chamadas simultâneas e quantas foram recusadas por você.
+Também roda sozinho. O `Semaphore` limita a 100 as chamadas simultâneas, e o programa mostra o pico real de chamadas em andamento e quantas foram recusadas pelo próprio serviço.
 
 ```java title="BulkheadSimples.java"
 import java.util.concurrent.Executors;
@@ -192,9 +279,14 @@ public class BulkheadSimples {
 }
 ```
 
-O pico nunca passa de 100, por mais requisições que cheguem. O `finally` é o ponto crítico do código: se a permissão não for devolvida em todo caminho de saída, incluindo exceção, o limite encolhe sozinho até travar tudo.
+```text title="Saída"
+pico de chamadas simultâneas: 100
+recusadas por você:           900
+```
 
-**De onde vem o número.** Não é chute nem é o contrato do parceiro. É a lei de Little: vazão desejada × latência média dele. Cem por segundo com resposta em 300 ms dá 30 chamadas em voo. Põe folga e mede.
+O pico nunca passa de 100, por mais requisições que cheguem. As 100 primeiras entram; as outras 900 esperam 200 ms por uma vaga, e nenhuma vaga abre antes dos 300 ms da chamada, então são recusadas. O `finally` é o ponto crítico do código: se a permissão não for devolvida em todo caminho de saída, inclusive em exceção, o limite encolhe sozinho até travar tudo.
+
+**De onde vem o número.** Não é chute nem é o contrato do parceiro (o contrato é o teto, não a meta). Vem da [lei de Little](https://en.wikipedia.org/wiki/Little%27s_law): chamadas em andamento = vazão × tempo médio de resposta. Cem chamadas por segundo com resposta em 300 ms dão 30 chamadas em andamento, em média. Some uma folga para picos e meça. O 100 dos exemplos é só ilustrativo.
 
 ### Circuit breaker — com Resilience4j
 
@@ -204,7 +296,7 @@ Aqui entra dependência. No Maven:
 <dependency>
   <groupId>io.github.resilience4j</groupId>
   <artifactId>resilience4j-circuitbreaker</artifactId>
-  <version>2.2.0</version>
+  <version>2.4.0</version>
 </dependency>
 ```
 
@@ -243,7 +335,8 @@ public class Breaker {
         for (int i = 1; i <= 60; i++) {
             if (i == 40) parceiroFora = false;  // parceiro se recupera
             try {
-                breaker.executeSupplier(Breaker::capturar);
+                String resposta = breaker.executeSupplier(Breaker::capturar);
+                System.out.println(i + ": " + resposta);
             } catch (CallNotPermittedException e) {
                 System.out.println(i + ": barrado pelo breaker, sem sair da aplicação");
             } catch (RuntimeException e) {
@@ -255,25 +348,66 @@ public class Breaker {
 }
 ```
 
-Na saída você vê a sequência inteira: falhas reais, transição `CLOSED_TO_OPEN`, um bloco de chamadas barradas sem sair da aplicação, `OPEN_TO_HALF_OPEN` depois dos 3 segundos, sondagem, e `HALF_OPEN_TO_CLOSED` quando o parceiro volta.
+Para rodar sem Maven, basta pôr no classpath os JARs `resilience4j-circuitbreaker`, `resilience4j-core` e `slf4j-api` (`java -cp "lib/*" Breaker.java`). A saída, resumida (o SLF4J imprime antes um aviso de que não há logger configurado, que pode ser ignorado):
 
-Os três estados: **fechado** é o saudável, corrente passando (o nome confunde no começo); **aberto** é o disjuntor desarmado, falha imediata sem tráfego; **meio-aberto** deixa poucas passarem para sondar e decide se fecha ou abre de novo.
+```text title="Saída (resumida)"
+1: falhou no parceiro
+...
+9: falhou no parceiro
+>> State transition from CLOSED to OPEN
+10: falhou no parceiro
+11: barrado pelo breaker, sem sair da aplicação
+...
+29: barrado pelo breaker, sem sair da aplicação
+>> State transition from OPEN to HALF_OPEN
+30: falhou no parceiro
+31: falhou no parceiro
+>> State transition from HALF_OPEN to OPEN
+32: falhou no parceiro
+33: barrado pelo breaker, sem sair da aplicação
+...
+51: barrado pelo breaker, sem sair da aplicação
+>> State transition from OPEN to HALF_OPEN
+52: CAPTURADO
+53: CAPTURADO
+>> State transition from HALF_OPEN to CLOSED
+54: CAPTURADO
+...
+60: CAPTURADO
+```
 
-**De onde vem, e o que ele não é.** O circuit breaker não tem relação com virtual threads. Ele é bem mais velho: aparece no livro *Release It!*, de Michael Nygard, em 2007, e ficou conhecido com o Hystrix da Netflix por volta de 2012 — anos antes de virtual thread existir. O problema que ele resolve é de sistema distribuído: parar de insistir com um serviço que está mal. Vale em qualquer linguagem, com ou sem thread, síncrono ou assíncrono. O mesmo se aplica ao bulkhead, que vem do mesmo livro e da mesma época.
+A sequência inteira aparece:
+
+1. As 10 primeiras chamadas falham de verdade. Na décima, a taxa de falha chega a 100% e o breaker abre. A linha `>>` sai antes de `10: falhou` porque o evento dispara quando o breaker registra a falha, antes de a exceção chegar ao `catch`.
+2. Durante 3 segundos (cerca de 20 voltas de 150 ms), as chamadas são barradas sem sair da aplicação.
+3. Na primeira chamada depois desse tempo, o breaker passa a meio-aberto e deixa 3 chamadas passarem para sondar. O parceiro ainda está fora, então ele abre de novo.
+4. O parceiro volta na chamada 40, mas o breaker só descobre na sondagem seguinte, na 52. As 3 chamadas de sondagem dão certo e o breaker fecha.
+
+Os três estados: **fechado** é o saudável, com a corrente passando (o nome confunde no começo); **aberto** é o disjuntor desarmado, com falha imediata e sem tráfego; **meio-aberto** deixa poucas chamadas passarem para sondar e decide se fecha ou abre de novo.
+
+**De onde vem, e o que ele não é.** O circuit breaker não tem relação com virtual threads. Ele é bem mais antigo: aparece no livro *Release It!*, de Michael Nygard, de 2007, e ficou conhecido com o Hystrix, que a Netflix abriu em 2012, mais de dez anos antes das virtual threads. O problema que ele resolve é de sistema distribuído: parar de insistir com um serviço que está mal. Vale em qualquer linguagem, com ou sem threads, síncrono ou assíncrono. O mesmo vale para o bulkhead, que vem do mesmo livro.
 
 A relação com este caso é outra, e vale guardar assim: **virtual threads não criaram a necessidade, tiraram o disfarce.** O pool de 200 threads dava um limite acidental de graça, e esse limite mascarava a ausência das duas proteções. Ao remover o pool, o que estava escondido apareceu.
 
-Isso importa na hora de aplicar. Quem conclui que "circuit breaker é coisa de virtual thread" deixa de usar nos serviços que continuam com pool — e lá ele é igualmente necessário, só que a falha demora mais a aparecer.
+Isso importa na hora de aplicar. Quem conclui que "circuit breaker é coisa de virtual thread" deixa de usá-lo nos serviços que continuam com pool, e lá ele é igualmente necessário; só que a falha demora mais a aparecer.
 
 ### Em produção, com Spring Boot
 
-No Spring o mesmo vira configuração, com métrica pronta para o Dynatrace:
+No Spring Boot, o mesmo vira configuração. O starter do Resilience4j exige o AOP e o Actuator do Spring Boot:
 
 ```xml title="pom.xml"
 <dependency>
   <groupId>io.github.resilience4j</groupId>
   <artifactId>resilience4j-spring-boot3</artifactId>
-  <version>2.2.0</version>
+  <version>2.4.0</version>
+</dependency>
+<dependency>
+  <groupId>org.springframework.boot</groupId>
+  <artifactId>spring-boot-starter-aop</artifactId>
+</dependency>
+<dependency>
+  <groupId>org.springframework.boot</groupId>
+  <artifactId>spring-boot-starter-actuator</artifactId>
 </dependency>
 ```
 
@@ -302,52 +436,68 @@ public Resposta capturar(Cobranca cobranca) {
     return adquirenteClient.capturar(cobranca);
 }
 
+// mesma assinatura do método protegido, mais a exceção no final
 private Resposta indisponivel(Cobranca cobranca, Throwable causa) {
-    return Resposta.negada("EMISSOR_INDISPONIVEL");
+    return Resposta.negada("INDISPONIVEL_TEMPORARIAMENTE");
 }
 ```
 
-Quatro detalhes que costumam morder:
+Com o Actuator, as métricas do bulkhead e do breaker saem pelo Micrometer, e dali para o Prometheus, o Dynatrace ou a ferramenta de observabilidade do time.
 
-- **Use o bulkhead de semáforo, não o de thread pool.** O Resilience4j tem as duas variantes; a de thread pool reintroduz exatamente o pool que você acabou de tirar. `@Bulkhead` sem `type` já é o de semáforo.
-- **Timeout é pré-requisito.** Sem tempo limite na chamada HTTP, ela não falha — fica pendurada. O breaker só conta falhas, então nunca abre, e você acumula conexões esperando para sempre.
-- **O limiar é proporção, não contagem.** Baixo demais abre por soluço; alto demais nunca abre. E `minimumNumberOfCalls` evita que três falhas às três da manhã, com tráfego baixo, abram o disjuntor.
-- **A ordem dos aspectos é fixa.** O Resilience4j aplica de fora para dentro: Retry, CircuitBreaker, RateLimiter, TimeLimiter, Bulkhead. O retry, sendo o mais externo, retenta o conjunto inteiro — e por isso ele precisa de espera crescente com um pouco de aleatoriedade, ou você cria a tempestade de retries que derruba de vez quem já estava mal.
+Cinco detalhes que costumam morder:
+
+- **Use o bulkhead de semáforo, não o de thread pool.** O Resilience4j tem as duas variantes, e a de thread pool reintroduz exatamente o pool que você acabou de tirar. `@Bulkhead` sem `type` já usa o de semáforo.
+- **As anotações só funcionam através do proxy do Spring.** Se outro método da mesma classe chama `capturar()` direto, o bulkhead e o breaker não rodam. O motivo está em [A pegadinha da self-invocation](/posts/aop-jdk-proxy-cglib/#a-pegadinha-da-self-invocation).
+- **Timeout é pré-requisito.** Sem tempo limite na chamada HTTP, ela não falha: fica pendurada. Uma chamada que nunca termina nunca entra na conta do breaker, que então não abre, e as conexões esperando se acumulam.
+- **O limiar é proporção, não contagem.** Baixo demais, o breaker abre por qualquer soluço; alto demais, nunca abre. E o `minimumNumberOfCalls` evita que três falhas às três da manhã, com tráfego baixo, abram o disjuntor.
+- **Cuidado com a ordem dos aspectos.** Por padrão, o Resilience4j aplica, de fora para dentro: Retry, CircuitBreaker, RateLimiter, TimeLimiter, Bulkhead (a ordem pode ser mudada por propriedades como `resilience4j.retry.retryAspectOrder`). Sendo o mais externo, o retry repete o conjunto inteiro. Por isso ele precisa de espera crescente com um pouco de aleatoriedade ([backoff exponencial com jitter](https://aws.amazon.com/blogs/architecture/exponential-backoff-and-jitter/)), ou você cria uma tempestade de retries que derruba de vez quem já estava mal. Em cobrança, retry também exige idempotência: veja [Cobrança duplicada no retry](/posts/cobranca-duplicada-no-retry/).
 
 ### O que devolver para quem foi recusado
 
-Em cartão, **negar não é falhar**. Erro genérico obriga a maquininha a decidir sem informação. Negar com o código certo diz que foi indisponibilidade temporária, e não recusa por saldo ou suspeita de fraude — isso muda o que a rede faz em seguida e muda o atendimento que o portador recebe.
+Em cartão, **negar não é falhar**. Um erro genérico obriga a maquininha a decidir sem informação. Uma negativa com um código de indisponibilidade temporária diz que o problema é passageiro, e não uma recusa por saldo ou por suspeita de fraude. Quem recebe pode tentar de novo depois, e quem atende o portador (o titular do cartão) sabe o que aconteceu.
 
-O critério para escolher entre erro imediato e nova tentativa é o orçamento de tempo: autorização síncrona tem poucos segundos, então recusa rápida é o caminho principal. Retentar fica para os fluxos assíncronos — ajuste financeiro, estorno, processamento em lote — onde a espera cabe.
+O critério para escolher entre recusa imediata e nova tentativa é o orçamento de tempo. Uma autorização síncrona tem poucos segundos, então recusar rápido é o caminho principal. Retentar fica para os fluxos assíncronos, como ajuste financeiro, estorno e processamento em lote, onde a espera cabe.
 
 ## 8. Padrões nomeados
 
 **Já explicados acima — aqui fica só o nome formal**
 
-- **Carrier pinning** — a virtual thread bloqueia sem conseguir desmontar e mantém a thread real refém. *Onde mais aparece:* qualquer runtime que multiplexa tarefas leves sobre threads do SO; goroutines em Go têm a versão delas ao chamar código nativo.
-- **CLOSE_WAIT como sintoma** — socket que o outro lado fechou e o seu não. *Onde mais aparece:* vazamento de conexão por `close()` que não roda, cliente HTTP sem try-with-resources, pool que nunca devolve. É um dos primeiros lugares a olhar quando o processo está vivo mas mudo.
-- **Deslocamento de gargalo** — remover um limite não aumenta capacidade, só empurra a fila para o próximo recurso escasso. *Onde mais aparece:* aumentar o pool de threads e derrubar o banco, subir réplicas e saturar a rede, paralelizar um job e estourar a API de terceiro.
-- **Bulkhead** — limite declarado de chamadas simultâneas a um recurso, para que a sobrecarga de uma dependência não afunde o serviço inteiro. O nome vem das anteparas que dividem o casco de um navio em compartimentos estanques. Vem do livro *Release It!*, de Michael Nygard (2007) — nada a ver com virtual threads. *Onde mais aparece:* separar o pool de conexões por dependência, limitar consumidores por tópico, isolar tenant em SaaS.
-- **Circuit breaker** — para de chamar quem está falhando, espera, e volta sondando. Três estados: fechado, aberto, meio-aberto. Também do *Release It!* (2007), popularizado pelo Hystrix da Netflix por volta de 2012, anos antes de virtual thread existir. *Onde mais aparece:* qualquer chamada a terceiro, e também entre microsserviços internos. **Virtual threads não criaram a necessidade dele nem do bulkhead — só tiraram o disfarce**, porque o pool de threads dava um limite acidental que mascarava a ausência dos dois.
+- **Carrier pinning** — a virtual thread bloqueia sem conseguir desmontar e mantém a carrier refém. Por `synchronized`, só do Java 21 ao 23. *Onde mais aparece:* mesmo no Java 24 em diante, ainda há pinning quando código nativo chama de volta código Java que bloqueia, e durante o carregamento e a inicialização de classes ([JEP 491](https://openjdk.org/jeps/491)). O Java 26 tirou um desses casos, a espera pela inicialização de uma classe ([post do Java 29](/posts/java-29/#virtual-threads-liberam-a-carrier-enquanto-esperam-a-inicialização-de-uma-classe)).
+- **CLOSE_WAIT como sintoma** — socket que o outro lado fechou e o seu não. *Onde mais aparece:* vazamento de conexão por `close()` que não roda, cliente HTTP sem try-with-resources, pool que nunca devolve a conexão. É um dos primeiros lugares a olhar quando o processo está vivo, mas mudo.
+- **Deslocamento de gargalo** — remover um limite não aumenta a capacidade, só empurra a fila para o próximo recurso escasso. *Onde mais aparece:* aumentar o pool de threads e derrubar o banco, subir réplicas e saturar a rede, paralelizar um job e estourar a cota de uma API de terceiro.
+- **Bulkhead** — limite declarado de chamadas simultâneas a um recurso, para que a sobrecarga de uma dependência não afunde o serviço inteiro. O nome vem das anteparas que dividem o casco de um navio em compartimentos estanques. Vem do livro *Release It!*, de Michael Nygard (2007), e não tem nada a ver com virtual threads. *Onde mais aparece:* pool de conexões separado por dependência, limite de consumidores por tópico, isolamento de clientes (*tenants*) em SaaS.
+- **Circuit breaker** — para de chamar quem está falhando, espera e volta sondando. Três estados: fechado, aberto e meio-aberto. Também vem do *Release It!* (2007) e foi popularizado pelo Hystrix, da Netflix, em 2012, anos antes das virtual threads. *Onde mais aparece:* em qualquer chamada a terceiro, e também entre microsserviços internos. **Virtual threads não criaram a necessidade dele nem do bulkhead, só tiraram o disfarce**, porque o pool de threads dava um limite acidental que mascarava a ausência dos dois.
 
 **Mencionados de passagem — vale saber o que são**
 
-- **Backpressure** — mecanismo pelo qual quem está sobrecarregado avisa quem produz para desacelerar, em vez de aceitar tudo e desmoronar. Semáforo, fila limitada e rate limit são formas de aplicar. *Por que importa aqui:* virtual threads são ótimas para I/O, mas não oferecem backpressure — se você precisa dela, o modelo de threads não é o seu problema e trocar de modelo não ajuda.
-- **Scoped Values** — substituto principiado do `ThreadLocal`, finalizado no Java 25. Virtual threads nunca são reaproveitadas, então objeto por thread vira objeto por requisição, e isso cria pressão de memória invisível que só aparece sob carga alta. *Onde mais aparece:* propagação de contexto — usuário autenticado, trace id, tenant.
-- **JEP** — Java Enhancement Proposal, o documento que descreve cada mudança da plataforma e o raciocínio por trás dela. O JEP 491 é o que corrigiu o pinning; o JEP 444 é o que trouxe virtual threads. *Por que está aqui:* saber ler um JEP é a forma de conferir o que uma versão mudou sem depender de post de blog.
+- **Backpressure** — mecanismo pelo qual quem está sobrecarregado sinaliza a quem produz que desacelere, em vez de aceitar tudo e desmoronar. Semáforo, fila limitada e rate limit são formas de aplicar. *Por que importa aqui:* virtual threads não aplicam backpressure sozinhas, elas aceitam tudo o que chega. O freio precisa ser declarado, como o semáforo do bulkhead.
+- **Scoped Values** — alternativa ao `ThreadLocal` para compartilhar dados imutáveis ao longo de uma chamada, finalizada no Java 25 ([JEP 506](https://openjdk.org/jeps/506); detalhes no [post do Java 25](/posts/java-25/#scoped-values)). Virtual threads não devem ser reaproveitadas em pool, então o velho hábito de guardar um objeto caro por thread vira um objeto por requisição. Como elas podem ser muitas, a JEP 444 pede cuidado com `ThreadLocal`: o consumo de memória só aparece sob carga alta. *Onde mais aparece:* propagação de contexto, como usuário autenticado, trace id e tenant.
+- **JEP** — JDK Enhancement Proposal, o documento que descreve cada mudança da plataforma e o raciocínio por trás dela. A JEP 444 trouxe as virtual threads no Java 21; a JEP 491 corrigiu o pinning por `synchronized` no Java 24. *Por que está aqui:* ler a JEP é a forma de conferir o que uma versão mudou sem depender de post de blog.
 
 ## 9. Onde eu apertaria numa entrevista
 
 - O upgrade para o Java 25 leva semanas. O que você faz hoje, no plantão?
 - Java 25 e Spring Boot 4 no mesmo deploy: se algo quebrar, como você sabe qual dos dois foi?
 - Qual número você coloca no semáforo do adquirente, e como chega nele?
-- Depois de tudo corrigido, que métrica no Dynatrace te avisaria que o pinning voltou?
+- Depois de tudo corrigido, que métrica no Dynatrace avisaria que o pinning voltou?
 - O teste de carga passou limpo. O que faltava nele?
 
 ## Fontes
 
-- InfoQ — [Virtual Threads after JDK 24: What Changed for Production Java](https://www.infoq.com/articles/virtual-threads-after-jdk24/)
+- OpenJDK — [JEP 444: Virtual Threads](https://openjdk.org/jeps/444) (casos de pinning, carriers, thread dump, JFR, `ThreadLocal`)
+- OpenJDK — [JEP 491: Synchronize Virtual Threads without Pinning](https://openjdk.org/jeps/491) (Java 24)
+- OpenJDK — [JEP 506: Scoped Values](https://openjdk.org/jeps/506) (Java 25)
+- Oracle — [Virtual Threads](https://docs.oracle.com/en/java/javase/21/core/virtual-threads.html) (guia do Java 21)
+- Oracle — [The java Command](https://docs.oracle.com/en/java/javase/21/docs/specs/man/java.html) (tamanho padrão da pilha, `-Xss`)
 - Netflix Technology Blog — [Java 21 Virtual Threads: Dude, Where's My Lock?](https://netflixtechblog.com/java-21-virtual-threads-dude-wheres-my-lock-3052540e231d) (julho de 2024)
-- OpenJDK — [JEP 491: Synchronize Virtual Threads without Pinning](https://openjdk.org/jeps/491)
-- OpenJDK — [JEP 444: Virtual Threads](https://openjdk.org/jeps/444)
-- Resilience4j — [documentação de Bulkhead e CircuitBreaker](https://resilience4j.readme.io/docs/getting-started)
+- InfoQ — [Virtual Threads after JDK 24: What Changed for Production Java](https://www.infoq.com/articles/virtual-threads-after-jdk24/)
+- IETF — [RFC 9293: Transmission Control Protocol](https://www.rfc-editor.org/rfc/rfc9293) (estados TCP, CLOSE-WAIT)
+- Spring Boot — [Common Application Properties](https://docs.spring.io/spring-boot/appendix/application-properties/index.html) (`spring.threads.virtual.enabled`, `server.tomcat.threads.max`)
+- Spring Boot — [Spring Boot 3.2 Release Notes](https://github.com/spring-projects/spring-boot/wiki/Spring-Boot-3.2-Release-Notes) (suporte a virtual threads)
+- HikariCP — [README](https://github.com/brettwooldridge/HikariCP) (`maximumPoolSize` e `connectionTimeout` padrão)
+- Resilience4j — [CircuitBreaker](https://resilience4j.readme.io/docs/circuitbreaker), [Bulkhead](https://resilience4j.readme.io/docs/bulkhead) e [Getting Started com Spring Boot 3](https://resilience4j.readme.io/docs/getting-started-3) (dependências, ordem dos aspectos, fallback)
+- Martin Fowler — [CircuitBreaker](https://martinfowler.com/bliki/CircuitBreaker.html)
+- ACM Digital Library — [Release It!: Design and Deploy Production-Ready Software](https://dl.acm.org/doi/10.5555/1200767) (Michael T. Nygard, 2007)
+- Netflix Technology Blog — [Introducing Hystrix for Resilience Engineering](https://netflixtechblog.com/introducing-hystrix-for-resilience-engineering-13531c1ab362) (novembro de 2012)
+- Wikipedia — [Little's law](https://en.wikipedia.org/wiki/Little%27s_law)
+- AWS Architecture Blog — [Exponential Backoff And Jitter](https://aws.amazon.com/blogs/architecture/exponential-backoff-and-jitter/)
